minor fix of 011 folder, wrong img center alignment

--- a/011_border-radius-property/main.css
+++ b/011_border-radius-property/main.css
@@ -14,7 +14,7 @@ border: 3px groove gray;
 border-radius: 100%;
 display: block;
 margin-left: auto;
-margin-left: auto;
+margin-right: auto;
 }
 
 .first {
